css/style.css
body {
  font-family: 'Roboto', sans-serif;
  margin: 0;
  font-size: 16px;
  min-height: 100vh;
  display: flex;
  flex-direction: column;
  
}

.responsive-image {
  max-width: 100%;
  height: auto;
  text-decoration: none;

}
header {
    display: flex;
    justify-content: space-between;
    background-color: #1F2937;
    align-items: center;
}

.logo-text {
    color: #f9faf8;
    font-size: 24px;
    font-weight: 700;
    margin-left: 16px;
    gap: 50px;
    margin: 14px;
}
.button-container{
    margin-right: 48px;
    gap: 12px;
    justify-content: flex-end;
}
header button {
    font-size: 18px;
    text-decoration: none;
    color: #f9faf8;
    background-color: #1F2937;
    outline: none;
    border: none;
}

.subheader {
    display: flex;
    align-items: center;
    background-color: #1F2937;
    gap: 16px;
}

.subheader-text {
    display: flex;
    justify-content: center;
    max-width: 600px;
    margin-left: 96px;
    flex-direction: column;
}
.subheader .Main-text {
    font-size: 48px;
    font-weight: 900;
    margin: 0;
    color: #f9faf8;

}
.subheader .Secondary-text {
    font-size: 18x;
    margin: 0;
    color: #e7e7eb;
}
.signUp  {
    background-color: #3B82F6;
    color: #f9faf8;
    padding: 5px;
    border-radius: 5px;
    width: 100px;
    
}
.subheader-image {
    display: flex;
}

.Information { 
    display: flex;
    flex-direction: column;
    align-items: center;
    text-align: center;
    margin-top: 14px;
    margin-bottom: 36px;
}
.information-header {
    font-size: 36px;
    color: #1f2937;
    font-weight: 900;
}
.information-box {
    display: flex;
    flex-direction: row;
    gap: 32px;
}

.information-box .illustration-cube {
    height: 150px;
    width: 150px;
    border: #3B82F6 4px solid;
    border-radius: 10px;
    margin: 0;
}
.information-box .text {
    color: #848586;
    text-align: center;
    text-wrap: wrap ;
    max-width: 150px;
}

.quotation-area {
    background-color: #E5E7Eb;
    display: flex;
    flex-direction: column;
    align-items: center;
    justify-content: center;
    padding: 24px;
    gap: 24px;
}
.quotation-area .quote {    
    font-style: italic;
    font-size: 36px;
    font-weight: 300;
    color: #1F2937;
    text-align: left;
    max-width: 900px;
}
.quotation-area .attribution {
    font-size: 24px;
    font-weight: 300;
    color: #1F2937;
    text-align: right;
    max-width: 900px;
    align-self: center;
    margin-right: 24px;
    max-width: 900px;
}
.callToAction {
    display: flex;
    justify-content: center;
    align-items: center;
    padding: 24px;

}
.callBox {
    display: flex;
    justify-content: space-between;
    align-items: center;
    background-color: #3B82F6;
    text-align: center;
    margin: 24px;
    padding: 36px;             
    width: min(900px,80%);   
    gap: 24px; 
    
    border-radius: 10px;
}

.callBox .left-text {
    font-size: 18px;
    text-align: left;
    color: #f9faf8;
    padding-left: 36px;
    font-weight: 900;
    margin: 0;                 
}
.left-text .callSub {
    font-size: 16px;
    font-weight: 300;
    margin: 0;
}

.callBox .button-side {
    display: flex;
    align-items: center;
    justify-content: center;
    gap: 12px;
    margin: 0;                 
    padding-right: 36px;
}

.callBox button {
    border: 2px solid #E5E7Eb;
    
}

